--- a/foundations/intro-to-css/01-css-methods/style.css
+++ b/foundations/intro-to-css/01-css-methods/style.css
@@ -7,8 +7,16 @@ div {
   font-size: 32px;
 }
 
+/*
 p {
     color: white;
     background-color: green;
+    font-size: 18px;
 }
+
+button {
+    background-color: orange;
+    font-size: 18px;
+}
+    */
 
