--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -11,6 +11,11 @@
     font-size: 36px;
 }
 
-#third {
+#third, #fourth {
     font-size: 24px;
+}
+
+#fourth {
+    background-color: #7fff00;
+    font-weight: bold;
 }
