--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,6 +1,7 @@
 
 
-.adjust-font {
+.first-element,
+.second-element {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", sans-serif;
 }
