--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -14,6 +14,7 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  
 }
 
 a {
@@ -26,4 +27,7 @@ a {
 
 div {
   display: flex;
+  align-items: center;
 }
+
+
