--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -14,7 +14,6 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
-  
 }
 
 a {
@@ -30,4 +29,7 @@ div {
   align-items: center;
 }
 
+li{
+  display: inline;
+}
 
