--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -14,6 +14,7 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
 }
 
 a {
@@ -30,6 +31,4 @@ div {
   justify-content: space-between;
 }
 
-li{
-  display: inline;
-}
+
