--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,13 +1,17 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
 }
 
 .logo {
   font-size: 48px;
   font-weight: 900;
   color: tomato;
-  background: white;
+  background: #ffffff;
   padding: 4px 32px;
 }
 
@@ -15,6 +19,9 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
+  /*justify-content: space-between; this will not work as there is no space left*/
+  padding: 0px;
+  gap: 10px;
 }
 
 a {
@@ -25,10 +32,12 @@ a {
   text-decoration: none;
 }
 
+
+/*
 div {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-
-
+put these on header class 
+*/
