--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -13,6 +13,8 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
+  padding: 8px;
+  gap: 8px;
 }
 
 .profile-image {
@@ -46,4 +48,7 @@ a {
 
 ul {
   list-style-type: none;
+  padding: 0px;
+  display: flex;
+  gap: 8px;
 }
