--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -15,6 +15,7 @@ body {
   display: flex;
   padding: 8px;
   gap: 8px;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -51,4 +52,10 @@ ul {
   padding: 0px;
   display: flex;
   gap: 8px;
+}
+
+.right-items {
+  display: flex;
+  gap: 8px;
+
 }
