--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -51,11 +51,11 @@ ul {
   list-style-type: none;
   padding: 0px;
   display: flex;
-  gap: 8px;
+  gap: 16px;
 }
 
-.right-items {
+.flex-container {
   display: flex;
-  gap: 8px;
-
+  gap: 16px;
+  align-items: center;
 }
