--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -14,6 +14,12 @@ img {
   justify-content: center;
 }
 
+
+.items {
+  display: flex;
+  justify-content: center;
+}
+
 /* do not edit this footer */
 .footer {
   position: fixed;
