--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -12,13 +12,29 @@ img {
   font-weight: 900;
   display: flex;
   justify-content: center;
+  padding: 0 0 32px 0;
 }
 
 
-.items {
+.items-container {
   display: flex;
   justify-content: center;
+  gap: 52px;
 }
+
+.flower {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.text {
+  text-align: center;
+}
+
+
 
 /* do not edit this footer */
 .footer {
