--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,13 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  /* display: flex;
+  flex-direction: column; */
+}
+
+.header {
+  font-size: larger;
+  font-weight: bold;
 }
 
 .icon {
@@ -67,3 +74,4 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
