--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,14 +20,21 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
-  /* display: flex;
-  flex-direction: column; */
+  display: flex; /*added this*/
+  
 }
 
 .header {
   font-size: larger;
   font-weight: bold;
 }
+
+/*added this*/
+.head-close {
+  display: flex;
+  justify-content: space-between;
+}
+
 
 .icon {
   color: royalblue;
@@ -40,6 +47,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0; /*added this*/
 }
 
 .close-button {
