--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,10 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  /*added the below for header and footer pushed to top and end of page*/
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -16,6 +20,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
@@ -27,13 +32,12 @@ input {
 
 
 /*added from here*/
-ul {
+.left-links, .right-links {
   list-style-type: none;
   padding: 0px;
-  /* display: flex; */
+  display: flex;
+  gap: 20px;
 }
-
-
 
 a {
   text-decoration: none;
@@ -43,13 +47,18 @@ a {
 .header, .footer {
   display: flex;
   justify-content: space-between;
+  padding: 0 20px;
 }
 
 .footer {
   background-color: #eeeeee;
 }
 
-.left-link, right-links {
+.content {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px
 }
+
 
